# eventpix_api

./: .gitignore  .secrets.example  README.md  compose.yml  pyproject.toml
.github/workflows/: deploy.yml  deploy_to_azure.yml  main_eventpix-api.yml  push_to_acr.yml
src/eventpix_api/: calendar.py  calendar_api.py  lib.py  main.py
